A few alignment fixes

--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -335,6 +335,12 @@ border-radius: 0 0 5px 5px;
 	line-height: 42px;
 	vertical-align: middle;
 }
+
+.controls img {
+	vertical-align: middle;
+	margin-right: 4px;
+}
+
 .controls.inline
 {
   float: right;
